# Yash-cadiem

agent-app/: package.json  pnpm-lock.yaml
agent-app/src/: vite-env.d.ts
agent-app/src/app/: layout.tsx  page.tsx
agent-app/src/lib/: api.ts  types.ts
agent_backend/: .env  .gitignore  config.py  main.py  test.py
agent_backend/Agent/: Global_Agent.py  Judge_agent.py  LocalFile_agent.py  base_llm.py
agent_backend/Routes/: langfuse_client.py  routes.py
agent_backend/Tools/: exa_agent.py  serper_agent.py
local-agent/: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
local-agent-ashish/: .env  README.md  app.py  document_parser.py  pyproject.toml  rag_agent.py  requirements.txt  test_api.py
local-agent-ashish/chroma_db/: chroma.sqlite3
local-agent-ashish/documents/: aerospace_engineering_principles.txt  ai_trends_2025.txt  biomedical_research_overview.txt  machine_learning_basics.txt  safety_presentation.pptx  sample.md  sample.txt  software_development.pptx
local-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
local-agent/data/: agent.db  agent.db-shm  agent.db-wal
local-agent/data/checkpoints/: index.sqlite  query.sqlite  query.sqlite-shm  query.sqlite-wal
local-agent/data/chroma/: chroma.sqlite3
local-agent/src/agent_app/: chunking.py  config.py  db.py  embedding.py  main.py  utils.py  vectorstore.py
local-agent/src/agent_app/graphs/: index_graph.py  query_graph.py
local-agent/src/local_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
